<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/line33">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_medium"
                android:text="@string/location_status"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_medium"
                android:layout_marginLeft="5dp"
                android:includeFontPadding="false"
                android:text="@string/inactive"
                android:textColor="@color/red_custom"
                android:textSize="20sp" />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_record"
            style="@style/main_button_style"
            android:text="@string/start_recording"
            app:layout_constraintBottom_toTopOf="@id/line66"
            app:layout_constraintRight_toLeftOf="@id/line05"
            app:layout_constraintTop_toTopOf="@id/line33" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_message"
            style="@style/main_button_style"
            android:text="@string/help_message"
            app:layout_constraintLeft_toLeftOf="@id/line05"
            app:layout_constraintBottom_toTopOf="@id/line66"
            app:layout_constraintTop_toTopOf="@id/line33" />


        <SurfaceView
            android:id="@+id/prew"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_sos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_sos" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_custom"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20dp"
            android:padding="5dp"
            android:text="@string/sos_102"
            app:icon="@drawable/ic_phone"
            app:iconGravity="textStart"
            app:iconSize="30dp"
            android:textSize="30sp"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line66" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>